[package]
name = "tuner"
version = "0.1.0"
authors = ["Giovanni Mazzeo mazzeo.gio@gmail.com"]

[[bin]]
name = "annealing-tuner"

[dependencies]
time = "*"
rustc-serialize = "0.3" 
rand = "0.3"
libc = "0.2.0"
raw-cpuid = "2.0.1"
ndarray = "0.6.8"
lazy_static = "0.1.*"
num = "0.1"
ansi_term = "0.9"
pbr="1.0.0-alpha.1"
csv = "0.14"
hwloc = "0.4.0"
num_cpus = "1.0"
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
wait-timeout = "0.1"
ssh2="0.3"
xml-rs="0.3"
